--- a/Methodology/C2.md
+++ b/Methodology/C2.md
@@ -1,2 +1,54 @@
 # Command and Control
 
++ [Setting up External Servers]
+  + [Digital Ocean](#digital-ocean)
+  + [AWS Lightsail](#aws-lightsail)
+  + [Linode](#linode)
++ [C2 Frameworks](#c2-frameworks)
+  + [Metasploit](#metasploit)
+  + [Cobalt Strike](#cobalt-strike)
+  + [PowerShell Empire](#powershell-empire)
+  + [dnscat2](#dnscat2)
+  + [Pupy Shell](#pupy-shell)
+  + [PoshC2](#poshc2)
+  + [Merlin](#merlin)
+  + [Nishang](#nishang)
+
+# Setting up External Servers
+
+
+
+## Digital Ocean
+
+## AWS Lightsail
+
+## Linode
+
+# C2 Frameworks
+
+| Name | Written in | Clame to fame |
+| :-: | :-: | --- |
+| [Metasploit](#metasploit) | Ruby | Gold Standard, active community support |
+| [Cobalt Strike](#cobalt-strike) | Aggressor | Post-exploitation, also Gold Standard (NOT FREE!) |
+| [Powershell Empire](#powershell-empire) | PowerShell(Win)/Python(Linux) | Post-exploitation great for Window/AD envs |
+| [dnscat2](#dnscat2) | C | Encrypted tunnels over DNS (usually a way "out" of almost every network) |
+| [Pupy Shell](#pupy-shell) | Python | Run python on all agents without it actually being on your host |
+| [PoshC2](#poshc2) | PowerShell | Proxy aware C2 framework |
+| [Merlin](#merlin) | GO | HTTP/2 multiplexed, bi-directional connections that stay open and are in binary. Easy to parse and not human readable without an interpreter |
+| [Nishang](#nishang) | PowerShell | Amazing collection of PowerShell scripts that can be used for C2 and all other phases |
+
+# Metasploit
+
+# Cobalt Strike
+
+# Powershell Empire
+
+# dnscat2
+
+# Pupy Shell
+
+# PoshC2
+
+# Merlin
+
+# Nishang
