--- a/Methodology/C2.md
+++ b/Methodology/C2.md
@@ -1,6 +1,10 @@
 # Command and Control
+[**Back** to Methodologies](/Methodology#methodologies)
 
-+ [Setting up External Servers]
+*Command and Control consists of techniques that adversaries may use to communicate with systems under their control within a victim network. Adversaries commonly attempt to mimic normal, expected traffic to avoid detection. There are many ways an adversary can establish command and control with various levels of stealth depending on the victim’s network structure and defenses.*
+                                                -[Mitre ATT&CK](https://attack.mitre.org/tactics/TA0011/)
+
++ [Setting up External Servers](#setting-up-external-servers)
   + [Digital Ocean](#digital-ocean)
   + [AWS Lightsail](#aws-lightsail)
   + [Linode](#linode)
