--- a/Methodology/C2.md
+++ b/Methodology/C2.md
@@ -42,7 +42,141 @@
 | [Nishang](#nishang) | PowerShell | Amazing collection of PowerShell scripts that can be used for C2 and all other phases |
 
 # Metasploit
+by RAPID7
 
+
+
+## Installing Framework on Linux
+```bash
+curl https://raw.githubusercontent.com/rapid7/metasploit-omnibus/master/config/templates/metasploit-framework-wrappers/msfupdate.erb > msfinstall && \
+  chmod 755 msfinstall && \
+  ./msfinstall
+```
+
+## Running Metasploit
+Start the framework with the following command:
+```bash
+msfconsole
+```
+While it is completely useable at this point, it becomes when you also connect the framework to a backend database.
+
+## Setting Up locally hosted Database with authentication
+
+Especially for extended campaigns, having everything organized and integrated directly into the framework will be required.
+
+The following is copied from [This Guide](https://fedoraproject.org/wiki/Metasploit_Postgres_Setup) by the fedoraproject:
+1. Allowing password authentication to access postgres on localhost
+*Allow the possibility for account msf_user to use password based authentication to connect to databasse msf_user. Edit "/var/lib/pgsql/data/pg_hba.conf", change: *
+```bash
+host     all            all            127.0.0.1/32          ident
+```
+*to*
+```bash
+ost      "msf_database"	"msf_user"      127.0.0.1/32          md5
+host     all             all            127.0.0.1/32          ident
+```
+2. Starting postgres
+```bash
+user@magnolia:$ sudo -s
+user@magnolia:$ postgresql-setup initdb
+user@magnolia:$ systemctl start postgresql.service
+```
+3. Becoming the postgres user
+```bash
+root@magnolia:# su postgres
+```
+4. Creating a database user
+```bash
+postgres@magnolia:$ createuser msf_user -P
+Enter password for new role: yourmsfpassword
+Enter it again: yourmsfpassword 
+Shall the new role be a superuser? (y/n) n
+Shall the new role be allowed to create databases? (y/n) n
+Shall the new role be allowed to create more new roles? (y/n) n
+```
+5. Creating a database
+```bash
+postgres@magnolia:$ createdb --owner=msf_user msf_database
+```
+6. Configure Metasploit
+```bash
+root@magnolia:# msfconsole
+msf > db_status 
+[*] postgresql selected, no connection
+msf> db_connect msf_user:yourmsfpassword@127.0.0.1:5432/msf_database
+NOTICE:  CREATE TABLE will create implicit sequence "hosts_id_seq" for serial column "hosts.id"
+NOTICE:  CREATE TABLE / PRIMARY KEY will create implicit index "hosts_pkey" for table "hosts"
+[..]
+NOTICE:  CREATE TABLE will create implicit sequence "mod_refs_id_seq" for serial column "mod_refs.id"
+NOTICE:  CREATE TABLE / PRIMARY KEY will create implicit index "mod_refs_pkey" for table "mod_refs"
+```
+7. Enable the database on startup
+*Write the database configuration to separate configuration file so the password doesn't get printed on the screen during each start of the msfconsole.Please not the attributes are prepended with spaces characters not tabs.*
+```bash
+$ cat > /opt/metasploit4/config/database.yml << EOF
+production:
+    adapter: postgresql
+    database: msf_database
+    username: msf_user
+    password: yourmsfpassword
+    host: 127.0.0.1
+    port: 5432
+    pool: 75
+    timeout: 5
+EOF
+```
+*Use the database configuration file and connect to this database during each startup of msfconsole. Also change to the workspace of yur current pentesting project.*
+```bash
+$ cat > ~/.msf4/msfconsole.rc << EOF
+db_connect -y /opt/metasploit4/config/database.yml
+workspace -a YourProject
+EOF
+```
+8. Using the database
+*Once you have database configured and connected you can use it to store information. First check the database status:*
+```bash
+msf > db_status
+[*] postgresql connected to msf_database
+```
+*Scan the local network network:*
+```bash
+msf > db_nmap 192.168.1.0/24
+```
+*List hosts which are in the database:*
+```bash
+msf > hosts
+
+Hosts
+=====
+
+address        mac                name       os_name  os_flavor  os_sp  purpose  info  comments
+-------        ---                ----       -------  ---------  -----  -------  ----  --------
+192.168.1.1    11:22:33:44:55:66  router     Linux    2.6.X             device         
+192.168.1.100  22:33:44:55:66:77  mixer      Linux    2.6.X             device         
+```
+*List all the db commands for the version of metasploit you have installed:*
+```bash
+msf > help database
+
+Database Backend Commands
+=========================
+
+    Command        Description
+    -------        -----------
+    creds          List all credentials in the database
+    db_connect     Connect to an existing database
+    db_disconnect  Disconnect from the current database instance
+    db_export      Export a file containing the contents of the database
+    db_import      Import a scan result file (filetype will be auto-detected)
+    db_nmap        Executes nmap and records the output automatically
+    db_status      Show the current database status
+    hosts          List all hosts in the database
+    loot           List all loot in the database
+    notes          List all notes in the database
+    services       List all services in the database
+    vulns          List all vulnerabilities in the database
+    workspace      Switch between database workspaces
+```
 # Cobalt Strike
 
 # Powershell Empire
