--- a/Methodology/C2.md
+++ b/Methodology/C2.md
@@ -65,7 +65,8 @@ While it is completely useable at this point, it becomes when you also connect t
 Especially for extended campaigns, having everything organized and integrated directly into the framework will be required.
 
 The following is copied from [This Guide](https://fedoraproject.org/wiki/Metasploit_Postgres_Setup) by the fedoraproject:
-1. Allowing password authentication to access postgres on localhost
+### 1. Allowing password authentication to access postgres on localhost
+
 *Allow the possibility for account msf_user to use password based authentication to connect to databasse msf_user. Edit "/var/lib/pgsql/data/pg_hba.conf", change: *
 ```bash
 host     all            all            127.0.0.1/32          ident
@@ -75,17 +76,17 @@ host     all            all            127.0.0.1/32          ident
 ost      "msf_database"	"msf_user"      127.0.0.1/32          md5
 host     all             all            127.0.0.1/32          ident
 ```
-2. Starting postgres
+### 2. Starting postgres
 ```bash
 user@magnolia:$ sudo -s
 user@magnolia:$ postgresql-setup initdb
 user@magnolia:$ systemctl start postgresql.service
 ```
-3. Becoming the postgres user
+### 3. Becoming the postgres user
 ```bash
 root@magnolia:# su postgres
 ```
-4. Creating a database user
+### 4. Creating a database user
 ```bash
 postgres@magnolia:$ createuser msf_user -P
 Enter password for new role: yourmsfpassword
@@ -94,11 +95,11 @@ Shall the new role be a superuser? (y/n) n
 Shall the new role be allowed to create databases? (y/n) n
 Shall the new role be allowed to create more new roles? (y/n) n
 ```
-5. Creating a database
+### 5. Creating a database
 ```bash
 postgres@magnolia:$ createdb --owner=msf_user msf_database
 ```
-6. Configure Metasploit
+### 6. Configure Metasploit
 ```bash
 root@magnolia:# msfconsole
 msf > db_status 
@@ -110,7 +111,8 @@ NOTICE:  CREATE TABLE / PRIMARY KEY will create implicit index "hosts_pkey" for 
 NOTICE:  CREATE TABLE will create implicit sequence "mod_refs_id_seq" for serial column "mod_refs.id"
 NOTICE:  CREATE TABLE / PRIMARY KEY will create implicit index "mod_refs_pkey" for table "mod_refs"
 ```
-7. Enable the database on startup
+### 7. Enable the database on startup
+
 *Write the database configuration to separate configuration file so the password doesn't get printed on the screen during each start of the msfconsole.Please not the attributes are prepended with spaces characters not tabs.*
 ```bash
 $ cat > /opt/metasploit4/config/database.yml << EOF
@@ -132,7 +134,8 @@ db_connect -y /opt/metasploit4/config/database.yml
 workspace -a YourProject
 EOF
 ```
-8. Using the database
+### 8. Using the database
+
 *Once you have database configured and connected you can use it to store information. First check the database status:*
 ```bash
 msf > db_status
