--- a/TryHackMe/Buffer_Overflow_Prep/1.md
+++ b/TryHackMe/Buffer_Overflow_Prep/1.md
@@ -217,3 +217,7 @@ print()
 #### Output
 
 ![image](https://user-images.githubusercontent.com/83407557/185200516-46517967-4cee-4f09-99ac-3fbf950f551f.png)
+
+#### Creating matching byte array using mona on target
+
+![image](https://user-images.githubusercontent.com/83407557/185200904-84868e51-3e92-4696-bc2d-5cc6a850a7a2.png)
